manifests/varnish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3t-ing
  labels:
    app: 3t
    tier: varnish
  namespace: test-lc-manifest
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:237888372555:certificate/b24e54fe-d1d0-4ca7-9739-bb436af27e86
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: test-manifest.eks-portal.sportsbook.sgdigital.com
      http:
        paths:
          - backend:
              service:
                name: varnish
                port:
                  number: 80
            path: /
            pathType: Prefix
